Adjusts font size and height of dashboard credit chart to prevent overlapping labels/buttons. Refs. VO-2479.

--- a/app/styles/pages/_dashboard.scss
+++ b/app/styles/pages/_dashboard.scss
@@ -50,7 +50,7 @@
 
 .summaries {
   .well-out {
-    height: 180px;
+    height: 185px;
     position: relative;
 
     .btn {
@@ -74,7 +74,7 @@
 .chart-summary-table {
   @extend %heavy;
   @extend %float-r;
-  @extend %small;
+  font-size: 11px;
   line-height: 1.4;
   width: 65%;
   margin-bottom: 3px;
@@ -82,7 +82,6 @@
   tr {
     td:last-child {
       @extend %align-right;
-      font-size: 13px;
     }
   }
 
@@ -90,7 +89,7 @@
     padding-left: 4px;
   }
 
-  td.taller {
+  .taller td {
     padding-top: 6px;
   }
 
